		of the whole OpenCL 1.1 interface.
	* libgpukernel: library added to start the OpenCL implementation project.

2010-12-08
	* m2s-pipeline.c: warnings fixed.
	* disasm.c: warnings fixed.
	* libgpukernel: restructured, files added, OpenCL extended.
	* syscall.c, gpukernel.c: redirection of libOpenCL.so to libm2s-opencl.so

2010-12-12
	* libgpukernel: OpenCL implementation.

2010-12-13
	* syscall.c: system call 'readlink' implemented.

2010-12-16
	* libm2skernel/memory.c: bug fixed. Accesses to nonexistent page cause segmentation
		faults. Page attributes were set to modified before checking if the
		page was found or not.
	* libgpukernel: Evergreen ISA + OpenCL

2010-12-17
	* libgpukernel: functional simulation.
	* syscall.c: syscall 'write': bug fixed. After the las modifications in the handling of
		asynchronous system calls, a bug was introduced in the synchronous write.
		This bug might affect any simple execution.
	* libdisasm/Makefile.am: bug in file list caused distribution to fail compiling.

2010-12-20
	* libgpukernel: local memory, functional simulation.
	* libgpudisasm: LDS formats
	* libgpukernel: assignment of 1D/3D thread IDs and work sizes.
	* libgpumachine: LDS implementation

2010-12-22
	* libgpukernel: control-flow

2010-12-23
	* libgpukernel: more control flow

2010-12-23
	* libgpukernel: restructure. Warps created.

2010-12-26
	* libm2skernel/machine-fp.c: BUG FIXED in machine instructions FCOMI, FCOMIP, FUCOMI,
		FUCOMIP. These instructions exceptionally modify the integer flags. This
		detail was not taken into account, and they were modeled as if they modified
		the floating-point status register.

2010-12-27
	* libgpukernel/opencl-obj.c: improved analysis of ELF kernel binaries based on
		the symbols contained in the main symbol table.

2010-12-31
	* libgpukernel/cal-abi.c: new analysis of the secondary ELF kernel binary based on the
		new information released by AMD.
